--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,6 +1,6 @@
 /* Slider.css */
 .slider-wrapper {
-    max-width: 70rem;
+    max-width: 100%;
     max-height: 80vh;
     background-size: cover;
     margin: 0 auto;
