--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,22 @@
   margin: 0 auto;
   padding: 1rem;
 }
-/* Estilos para el contenedor del encabezado */
 .header-container {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
-  height: 250px; 
+  height: 250px;
   padding: 10px;
 }
 
-/* Estilos para el oscurecimiento de la imagen */
 .header-image {
   object-fit: cover;
   height: 100%;
   width: 100%;
-  filter: brightness(50%); /* Oscurecer la imagen */
-  border-radius: 10px; /* Redondear las esquinas de la imagen */
+  filter: brightness(50%); 
+  border-radius: 10px; 
 }
 
-/* Estilos para el texto sobre la imagen */
 .header-text {
   position: absolute;
   top: 50%;
@@ -33,70 +30,57 @@
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
 }
 
-/* Ajuste para el buscador */
 .input-group {
   margin-bottom: 20px;
 }
 
-/* Estilos para el contenedor del carrusel de opiniones */
+.slick-slide {
+  margin-right: 10px;
+}
+
 .slick-slider {
-  margin: 0 auto;
+  max-width: 100%;
+  max-height: 50%;
+  margin: 0 auto; 
+  padding: 10px; 
 }
 
-/* Estilos para los puntos de navegación del carrusel */
-.slick-dots {
-  bottom: -40px;
-}
-
-/* Estilos para ocultar los puntos de navegación (dots) del carrusel */
-
-
-.slick-dots li button:before {
-  font-size: 12px;
-}
-
-/* Estilos para cada diapositiva (testimonial-slide) del carrusel */
 .testimonial {
-  margin: 0 10px 20px; /* Agregar margen inferior de 20px */
-  background-color: #f8f9fa;
+  margin-bottom: 20px; 
+  background-color: #f2f2f2;
   border: 1px solid #ced4da;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.testimonial:hover {
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-}
-
-/* ... (otros estilos se mantienen igual) */
-
 
 .testimonial-img {
-  height: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.testimonial-img img {
+  max-width: 100px; 
+  height: auto;
+  border-radius: 10%; 
 }
 
 .testimonial-rating {
+  margin-top: -15px;
   font-size: 24px;
-  color: #ffc107;
+  color: #f1c40f;
 }
 
 .testimonial-quote {
-  font-style: italic;
-  color: #6c757d;
-}
-
-.testimonial-text {
+  margin: 1px 0; 
   text-align: center;
 }
-
-
-
-
-
-
-
-
+.testimonial-container {
+  max-height: 350px; 
+}
 
 
 @media (min-width: 576px) {
@@ -104,5 +88,25 @@
     content: "|";
     padding-right: 8px;
     color: #b2acac;
+  }
+}
+
+@media (max-width: 768px) {
+  .slick-slide {
+    max-width: 400px;
+    margin-right: 15px; 
+  }
+
+  .testimonial {
+    max-width: 450px;
+    max-height: 300px; 
+  }
+
+  .testimonial-img img {
+    max-width: 100px; 
+  }
+
+  .testimonial-rating {
+    font-size: 20px;
   }
 }
