--- a/src/components/Historia/Historia.css
+++ b/src/components/Historia/Historia.css
@@ -6,14 +6,14 @@
     font-family: "Open Sans", sans-serif;
     color: var(--azul);
     font-weight: bold;
-    font-size: 24px; /* Slightly increase the font size */
+    font-size: 22px; /* Slightly increase the font size */
   }
   
   p {
     font-family: "Lato", sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 18px; /* Slightly increase the font size */
+    font-size: 16px; /* Slightly increase the font size */
     line-height: 1.6; /* Add line-height for better readability */
     text-align: justify;
     color: #333333;
@@ -32,10 +32,13 @@
   
   .d-grid {
     display: grid; /* Use CSS Grid for better responsiveness */
-    gap: 3.5rem; /* Reduce the gap between grid items */
+    gap: 4rem; /* Reduce the gap between grid items */
     grid-template-columns: 1fr 1fr; /* Two columns layout for desktop */
   }
-  
+  .bg-gris{
+    background-color: #f7f7f7;
+    padding: 1.5rem;
+  }
   .imagenHistoria {
     max-width: 100%;
     height: auto;
