--- a/src/pages/cursosyprogramas/CursosyProgramas.css
+++ b/src/pages/cursosyprogramas/CursosyProgramas.css
@@ -1,33 +1,46 @@
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajusta los valores según sea necesario */
+}
+
 .card-text-small {
-    font-size: 10px;
-  }
-  
-  .button-ver-mas {
-    position: absolute;
-    bottom: 8px;
-    right: 8px;
-  }
-  
-  .img-darken {
-    filter: brightness(70%);
-    transition: filter 0.3s ease;
-  }
-  
-  .card-gratis-overlay {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-weight: 700;
-    font-size: 18px;
-    padding: 8px 16px;
-    border-radius: 4px;
-    pointer-events: none;
-    transition: opacity 0.3s ease;
-    opacity: 0;
-  }
-  
-  .position-relative:hover .card-gratis-overlay {
-    opacity: 1;
-  }
+  font-size: 14px;
+}
+
+.button-ver-mas {
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+}
+
+.img-darken {
+  filter: brightness(70%);
+  transition: filter 0.3s ease;
+}
+
+.card-gratis-overlay {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: rgba(151, 141, 47, 0.6);
+  color: white;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+/* .programa-overlay {
+
+  position: absolute;
+  padding: 1;
+  top: 40%;
+  left: 33%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 8px;
+  font-weight: bold;
+  width: auto;
+}
+.programa-overlay p{
+  color: rgb(185, 29, 29);
+
+} */
