--- a/src/components/navbar/Menu.css
+++ b/src/components/navbar/Menu.css
@@ -1,7 +1,25 @@
 .logo {
     background-size: cover;
     object-fit: cover;
+    will-change: filter;
+    transition: filter 300ms;
 }
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
 .active-link {
     font-weight: bold;
 }
