--- a/src/pages/contacto/Contacto.css
+++ b/src/pages/contacto/Contacto.css
@@ -2,11 +2,8 @@
     width: 66.6%;
     display: grid;
     gap: 3rem;
-
     grid-template-columns: repeat(2, 1fr);
-
 }
-
 
 /* Cambiar el color del texto del tooltip a blanco */
 .leaflet-tooltip {
@@ -19,40 +16,63 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
-.rounded-icon {
-   
-    /* Altura del ícono */
-    border: 2px solid #007bff;
-    /* Borde azul */
-    border-radius: 50%;
-    /* Hacer el borde circular */
-    padding: 8px;
-    /* Agregar un poco de espacio alrededor del ícono */
-}
-
-/* Estilos para el contenedor de íconos */
 .icon-container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-  }
-  
-  /* Estilos para los íconos de Font Awesome */
-  .icon {
-    color: #007bff; /* Color del ícono */
-    font-size: 20px; /* Tamaño del ícono */
-  }
+    align-items: flex-start;
+}
 
+/* Estilos para el contenedor del icono y el texto */
+.icon-with-text {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.icon-marker,
+.icon-mail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px !important;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #00233f;
+    margin-right: 10px;
+}
 
 /* Estilos para el texto al lado de los iconos */
 .icon-text {
     font-family: 'Noto Sans', sans-serif;
-    margin-left: 20px;
+    margin-left: 10px;
     /* Espacio entre el ícono y el texto */
     font-size: 16px;
-    color: #666666;
+    color: #484848;
     /* Color del texto (azul) */
 }
+
+.line-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20px;
+  }
+  
+  .line {
+    width: 100%;
+    height: 1.5px;
+    background-color: #e8e8e8;
+  }
+  
+  .star-container {
+    padding: 0 10px; /* Ajusta este valor para el espacio entre las líneas y la estrella */
+  }
+  
+  .star {
+    width: 20px;
+    height: 20px;
+  }
+  
 
 
 .formulario {
@@ -61,39 +81,4 @@
     flex-direction: column;
     align-items: center;
 
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.div {
-    margin: 10px 0;
-}
-
-label {
-    font-weight: bold;
-}
-
-input,
-select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.button {
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
 }
