--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,16 @@
   /* text-align: center; */
 }
 
+/* styles.css or your global CSS file */
+:root {
+  --primary-color: #007bff; /* Define the default color for light mode */
+  --background-color: #f8f9fa; /* Define the default background color for light mode */
+}
+
+
+
+
+
 .card {
   padding: 2em;
 }
