--- a/src/components/navbar/Menu.css
+++ b/src/components/navbar/Menu.css
@@ -66,15 +66,18 @@
 /* Define common styles for dark mode */
 
 /* Styles for dark mode */
-.navbar-dark .navbar-nav .nav-link {
-  color: #fff;
-  background-color: #333;
+.navbar-dark{
+  box-shadow: 0 1px 2px rgba(253, 253, 253, 0.1);
 }
 
+.navbar-dark .navbar-nav .nav-link {
+  color: #fff;
+}
 
 /* Styles for link on hover in dark mode */
 .navbar-dark .navbar-nav .nav-link:hover {
   transform: scale(1.1);
   color: #ffe601;
 }
+
 
