--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ h2 {
   color: #484848;
   font-weight: bold;
   font-size: 22px;
-  /* Slightly increase the font size */
+  text-transform: uppercase;
   text-shadow: 1px 1px #e0e0e0;
 }
 
