--- a/src/pages/contacto/Contacto.css
+++ b/src/pages/contacto/Contacto.css
@@ -83,6 +83,17 @@
 
 }
 
+.whatsapp-button {
+    display: inline-block;
+    background-color: #25d366;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 20px;
+  }
+
 
 
 
