--- a/src/components/FloatingDiv/FloatingDiv.css
+++ b/src/components/FloatingDiv/FloatingDiv.css
@@ -1,7 +1,7 @@
 .floatingdiv{
     justify-content: space-around;
     display: flex;
-    background: white;
+    background: var(--white-color);
     box-shadow: var(--boxShadow);
     border-radius: 17px;
     align-items: center;
@@ -9,11 +9,12 @@
     height: 6rem;
 }
 
-.floatingdiv>img{
-    transform: scale(0.4);
+.floatingdiv > img{
+    max-width: 50px;
+    
 }
 
-.floatingdiv>span{
+.floatingdiv > span{
     font-family: sans-serif;
     font-size: 16px;
 }
