--- a/src/components/navbar/Menu.css
+++ b/src/components/navbar/Menu.css
@@ -21,24 +21,19 @@
   }
 }
 
-.active-link {
-  font-weight: bold;
-}
-
 /* Navbar.css */
-/* Navbar Styles */
 .navbar {
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  background-color: white;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  background-color: var(--white-color);
+  box-shadow: 0px 2px 8px rgb(201,203,204);
 }
 
 .navbar-brand img {
   transition: max-width 0.3s ease, max-height 0.3s ease;
 }
 
-.navbar-toggler {
-  border: none;
+.active-link {
+  font-weight: bold;
 }
 
 /* Sticky Navigation */
@@ -53,26 +48,28 @@
 
 /* Link Animation */
 .navbar-nav li .nav-link {
-  color: #00233f;
+  color: var(--azulmarino-color);
   transition: all 0.3s ease;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-stretch: 100%;
+  font-style: normal;
 }
 
 .navbar-nav li .nav-link:hover {
   transform: scale(1.1);
-  color: #000000; /* Change this to the color you desire for the link text on hover */
+  color: var(--naranja-color);
 }
 
-/* Menu.css */
-/* Define common styles for dark mode */
+/* Dark mode */
 
-/* Styles for dark mode */
 .navbar-dark{
   background-color: #0d161c;
   box-shadow: 0 1px 2px rgba(253, 253, 253, 0.1);
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: #fff;
+  color: var(--white-color);
 }
 
 /* Styles for link on hover in dark mode */
