--- a/src/components/FloatingDiv/FloatingDiv.css
+++ b/src/components/FloatingDiv/FloatingDiv.css
@@ -3,18 +3,19 @@
     display: flex;
     background: var(--white-color);
     box-shadow: var(--boxShadow);
-    border-radius: 17px;
+    border-radius: 11.27px;
     align-items: center;
-    padding: 0px 28px 0px 0px;
-    height: 6rem;
+    padding: 7px 9px 7px 9px;
+    height: 91px;
+    width: 182.48px;
 }
 
 .floatingdiv > img{
-    max-width: 50px;
+    max-width: 30px;
     
 }
 
 .floatingdiv > span{
-    font-family: sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
     font-size: 16px;
 }
