--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -164,31 +164,35 @@ u {
 
 
 
+.fondo {
+  position: relative; /* Asegura que los elementos posicionados dentro sean relativos a este contenedor */
+}
+
+.fondo::before {
+  content: ""; /* Agregar un pseudo-elemento ::before */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #d50000; /* Color de fondo rojo */
+  opacity: 0.8; /* Ajusta la opacidad según tus preferencias */
+  z-index: -1; /* Colocar detrás de los otros elementos */
+}
+
 .i-right {
   flex: 1;
   position: relative;
 }
 
-.i-right>* {
+.i-right > * {
   position: absolute;
   z-index: 1;
 }
 
 .i-right>:nth-child(1) {
-  transform: scale(0.69);
-  left: -15%;
-  top: -9%;
-}
-
-.i-right>:nth-child(2) {
-  top: -4.6rem;
-  transform: scale(0.67);
-  left: -3rem;
-}
-
-.i-right>:nth-child(3) {
   transform: scale(1.4);
-  left: 28%;
+  left: 55%;
 }
 
 
