--- a/src/pages/vermas/Vermas.css
+++ b/src/pages/vermas/Vermas.css
@@ -1,43 +1,37 @@
-/* styles.css */
-/* Estilos para los componentes Tabs y TabList */
+/* Vermas.css */
 
-.Tabs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .TabList {
-    display: flex;
-    gap: 10px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .Tab {
-    cursor: pointer;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f0f0f0;
-    transition: background-color 0.3s ease;
-  }
-  
-  .Tab:hover {
-    background-color: #e0e0e0;
-  }
-  
-  .Tab:focus {
-    outline: none;
-  }
-  
-  /* Estilos para el contenido de cada pestaña (TabPanel) */
-  .TabPanel {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f0f0f0;
-  }
-  
+.menu-panel {
+  list-style: none;
+  padding-left: 0;
+}
+
+.menu-panel > li {
+  margin-bottom: 10px;
+}
+
+.menu-button {
+  background-color: #ab0d0da8;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  text-align: left;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.2s ease;
+}
+
+.menu-button:hover {
+  background-color: #dc2020;
+}
+
+.sub-menu {
+  list-style: none;
+  padding-left: 20px;
+  margin-top: 5px;
+  display: block;
+}
+
+.sub-menu > li {
+  margin-bottom: 5px;
+}
